complete reset button and fix starting message

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">Message</h2>
-
+	<h2 id="message">Start Game</h2>
+	
 	<section class="board">
 		<div id="sq0" class="square"></div>
 		<div id="sq1" class="square"></div>
@@ -23,5 +23,6 @@
 		<div id="sq7" class="square"></div>
 		<div id="sq8" class="square"></div>
 	</section>    
+	<button id="reset-button">Reset the Game</button>
 </body>
 </html>
