--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	
 	<link rel="stylesheet" href="./css/style.css">
+
+	<script defer src="./js/confetti.js"></script>
 	<script defer src="./js/app.js"></script>
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+	
 	<title>Tic Tac Toe</title>
 </head>
 <body>
