add cat gif function, call it with confetti

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 	<h1>Tic-Tac-Toe</h1>
+	<hr>
 	<h2 id="message">Start Game</h2>
 	
 	<section class="board">
@@ -32,5 +33,10 @@
 		<div id="sq8" class="square"></div>
 	</section>    
 	<button id="reset-button">Reset the Game</button>
+
+
+	<iframe id="meow" style="position: absolute; width: 0; height: 0; border:0;" src="https://giphy.com/embed/h7deZA51Ru9pwzlz0C">
+	</iframe>
+
 </body>
 </html>
