--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
+
 	<link rel="stylesheet" href="./css/style.css">
 
 	<script defer src="./js/confetti.js"></script>
 	<script defer src="./js/app.js"></script>
-	
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-	
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+	<source src="/audio/carriedaway.mp3" type="audio/mpeg" loop="true">
+
 	<title>Tic Tac Toe</title>
 </head>
+
 <body>
 	<h1>Tic-Tac-Toe</h1>
 	<hr>
 	<h2 id="message">Start Game</h2>
-	
+
 	<section class="board">
 		<div id="sq0" class="square"></div>
 		<div id="sq1" class="square"></div>
@@ -31,12 +35,14 @@
 		<div id="sq6" class="square"></div>
 		<div id="sq7" class="square"></div>
 		<div id="sq8" class="square"></div>
-	</section>    
+	</section>
 	<button id="reset-button">Reset the Game</button>
 
 
-	<iframe id="meow" style="position: absolute; width: 0; height: 0; border:0;" src="https://giphy.com/embed/h7deZA51Ru9pwzlz0C">
+	<iframe id="meow" style="position: absolute; width: 0; height: 0; border:0;"
+		src="https://giphy.com/embed/h7deZA51Ru9pwzlz0C">
 	</iframe>
 
 </body>
+
 </html>
