update to make raveMode() notes and set raveMode() inactive until function works

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<hr>
 	<h2 id="message">Start Game</h2>
 
-	<section class="board">
+	<section class="board" id="board">
 		<div id="sq0" class="square"></div>
 		<div id="sq1" class="square"></div>
 		<div id="sq2" class="square"></div>
