--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
-	<title>Tic Tac Toe</title>
+	<title>Tic Tac CatJam</title>
 </head>
 
 <body>
-	<h1>Tic-Tac-Toe</h1>
+	<h1>Tic-Tac-CatJam</h1>
 	<hr>
 	<h2 id="message">Start Game</h2>
 
